--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
 
 PROJECT(ESP)
 
-ADD_EXECUTABLE(CMAKE_RUN main.cpp input_parser.cpp molecule.cpp wfn.cpp)
+ADD_EXECUTABLE(CMAKE_RUN ./p1/main.cpp ./p1/input_parser.cpp ./p1/molecule.cpp ./p1/wfn.cpp)
 #ADD_EXECUTABLE(TEST_READ test_lapack.cpp)
 
 FIND_PACKAGE(BLAS REQUIRED)
