Making a point in 3d space it's own class.  Will help with vectors.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
 
 PROJECT(ESP)
 
-ADD_EXECUTABLE(P1 ./Project1/main.cpp ./Project1/molecule.cpp ./Project1/input_parser.cpp ./Project1/atom.cpp)
+ADD_EXECUTABLE(P1 ./Project1/main.cpp ./Project1/molecule.cpp ./Project1/input_parser.cpp ./Project1/atom.cpp ./Project1/real_space.cpp)
 
 #ADD_EXECUTABLE(CMAKE_RUN ./p1/main.cpp ./p1/input_parser.cpp ./p1/molecule.cpp ./p1/wfn.cpp)
 #ADD_EXECUTABLE(TEST_READ test_lapack.cpp)
